// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > renders danger variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-md font-medium transition-colors disabled:opacity-50 disabled:pointer-events-none bg-error text-primary-fg hover:bg-error/90 h-10 px-4"
    type="button"
  >
    删除
  </button>
</div>
`;

exports[`Button > renders default variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-md font-medium transition-colors disabled:opacity-50 disabled:pointer-events-none bg-primary text-primary-fg hover:bg-primary/90 h-10 px-4"
    type="button"
  >
    主按钮
  </button>
</div>
`;

exports[`Button > renders sm size 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-md font-medium transition-colors disabled:opacity-50 disabled:pointer-events-none bg-primary text-primary-fg hover:bg-primary/90 h-8 px-3 text-sm"
    type="button"
  >
    小按钮
  </button>
</div>
`;
